[project]
name = "scrapegraphai_mcp"
version = "1.36.0"
description = "Python scraper based on AI"
authors = [{ name = "ScrapeGraphAI" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "mcp>=1.2.1",
    "pydantic==2.10.3",
    "scrapegraphai==1.36.0",
]

[project.scripts]
scrapegraphai = "scrapegraphai_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
