[project]
name = "browser-use-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.37",
    "environs>=14.1.1",
    "mcp>=1.2.1",
]

[project.scripts]
browser-use-mcp = "browser_use_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
